# BuildingMassCNNTraining

./: .gitignore  CMakeLists.txt
AerialBuildingMass/: CGA.h  Camera.h  GLWidget3D.h  Grammar.h  RenderManager.cpp  RenderManager.h  Utils.cpp
StreetBuildingMass/: CGA.h  GLUtils.h  GLWidget3D.h  RenderManager.cpp  Utils.cpp
